[package]
name = "bsky-rs"
version = "0.1.1"
edition = "2021"

[lib]
name = "bsky_rs"
path = "src/lib.rs"

[[bin]]
name = "bsky-rs-example"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.31"
derive-getters = "0.3.0"
eframe = "0.30.0"
egui = "0.30.0"
reqwest = { version = "0.11", features = ["blocking","json"]}
serde = { version = "1.0.190", features = ["derive"] }
